# proot-distro

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  README_DEV.md  SideQuest  bootstrap-rootfs.py  bootstrap-rootfs.sh  install.sh  proot-distro.git.sh  proot-distro.py  proot-distro.sh  proot-distro.sh.bak  pyproject.toml  user.sh
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-distribution-request.yml  03-question.yml  04-question.yml  config.yml
.github/workflows/: build.yml  publish.yml  tests.yml
build-recipes/: alpine.yaml  archlinuxarm.yaml  debian.yaml  fedora.yaml  rocky.yaml  ubuntu.yaml
completions/: proot-distro.bash  proot-distro.fish
distro-bootstraps/: archlinux.sh  nixos.sh  opensuse.sh  ubuntu.sh  void.sh
distro-build/: adelie.sh  almalinux.sh  alpine.sh  archlinux.sh  artix.sh  chimera.sh  debian-oldstable.sh  debian-test.sh  debian.sh  deepin.sh  devuan.sh  endeavour.sh  eweos.sh  fedora.sh  manjaro.sh  nixos.sh  openkylin.sh  opensuse.sh  oracle.sh  pardus.sh  parrot.sh  rockylinux.sh  trisquel.sh  ubuntu-lts.sh  ubuntu-oldlts.sh  ubuntu.sh  void-musl.sh  void.sh
distro-plugins/: adelie.sh  almalinux.sh  alpine.sh  archlinux.sh  artix.sh  chimera.sh  debian-buster.sh  debian-oldstable.sh  debian.sh  deepin.sh  endeavour.sh  eweos.sh  fedora-33.sh  fedora-34.sh  fedora.sh  focal.sh  gentoo.sh  gentoo.sh.disabled  kali.sh  manjaro-aarch64.sh  manjaro.sh  nethunter.sh  openkylin.sh  opensuse.sh  oracle.sh  pardus.sh  parrot-lts.sh  parrot.sh  rockylinux.sh  slackware.sh  termux.sh  trisquel.sh  ubuntu-18.04-qemu.sh  ubuntu-18.04.sh  ubuntu-20.04.sh  ubuntu-20.10.sh  ubuntu-21.04.sh  ubuntu-lts.sh  ubuntu-oldlts.sh  ubuntu.sh  (+1 more)
proot_distro/: __init__.py  arch.py  atomic.py  cli.py  colors.py  config.py  constants.py  docker_pull.py  download.py  l2s.py  locking.py  message.py  names.py  parser.py  paths.py  progress.py  rootfs.py  session.py  sysdata.py
proot_distro/commands/: __init__.py  backup.py  build.py  clear_cache.py  copy.py  help.py  install.py  install_local.py  kill.py  list.py  login.py  ps.py  push.py  remove.py  rename.py  reset.py  restore.py  run.py  sync.py
proot_distro/completions/: _proot-distro  proot-distro.bash  proot-distro.fish
proot_distro/configs/: alpine.yaml  archlinuxarm.yaml  debian.yaml  fedora.yaml  rocky.yaml  termux.yaml  ubuntu.yaml
proot_distro/helpers/: __init__.py  build_cache.py  build_engine.py  docker.py  dockerfile.py  download.py  layer_diff.py  oci_writer.py  rootfs.py  tar_extract.py
scripts/: distro  user.sh
tests/: README.md  _builders.py  conftest.py
tests/integration/: test_backup_restore_roundtrip.py  test_build_end_to_end.py  test_clear_cache_and_list.py  test_cli_dispatch.py  test_copy_sync.py  test_install_local_oci.py  test_install_local_tar.py  test_login_get_proot_cmd.py  test_pull_offline.py  (+1 more)
(+64 files in other folders)
