[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "proot-distro"
version = "5.1.6"
description = "PRoot-Distro is a lightweight rootless Linux container management utility built around proot."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
'Homepage' = 'https://github.com/termux/proot-distro'
'Repository' = 'https://github.com/termux/proot-distro'
'Issue Tracker' = 'https://github.com/termux/proot-distro/issues'

[project.scripts]
proot-distro = "proot_distro.cli:main"
pd = "proot_distro.cli:main"

[tool.setuptools.packages.find]
include = ["proot_distro*"]

[tool.setuptools.package-data]
"proot_distro" = ["completions/*"]

[tool.setuptools.data-files]
"share/bash-completion/completions" = ["proot_distro/completions/proot-distro.bash"]
"share/zsh/site-functions" = ["proot_distro/completions/_proot-distro"]
"share/fish/vendor_completions.d" = ["proot_distro/completions/proot-distro.fish"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "live: hits the network or executes proot; skipped unless RUN_LIVE_TESTS=1 is set",
]
